# plex-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/plex_mcp/: __init__.py  plex_mcp.py
tests/: test_app.py  test_integration.py
