[project]
name = "plex-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "plexapi>=4.18.0,<5.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.15.8",
]

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true
